--- a/payment-1.html
+++ b/payment-1.html
@@ -137,7 +137,7 @@
 
               <div class="d-flex justify-content-between mb-2">
 
-                <span>Refferal Bonouses</span>
+                <span>Refferal Bonuses</span>
                 <span>₹69.00</span>
                 
               </div>
@@ -159,8 +159,8 @@
 
               <div class="d-flex flex-column">
 
-                <span>Today you pay(INR)</span>
-                <small>After 30 days ₹9.59</small>
+                <span></span>
+                <small>Pay ₹9.59</small>
                 
               </div>
               <span>₹0</span>
