add forgot password page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input type="password" id="password" placeholder="Password" required>
       <a href="/payment.html" type="submit" id="btn" class="login-btn">Login</a>
     </form>
-    <a href="#" class="forgot-pass">forgot password</a>
+    <a href="/forgot.html" class="forgot-pass">forgot password</a>
     <div id="payment-form" class="hidden">
       <h2>Pay Your Bill</h2>
       <p id="billing-no"></p>
